fixed images, added validation
