# app/static/swagger.json
@@ -367,6 +367,10 @@
                     "401": {
                         "description": "Unauthorized"
 
+                    },
+                    "413": {
+                        "description": "File size exceeds limit"
+
                     }
                 }
             }
@@ -965,6 +969,69 @@
                     },
                     "404": {
                         "description": "Post not found"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/posts/image/{id}/{pos}": {
+            "get": {
+                "tags": ["posts"],
+                "summary": "Get an image on a specific positon from a post.",
+                "description": "",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the post",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "pos",
+                        "in": "path",
+                        "description": "Position of image on the post",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Image successfully retrieved",
+                        "content": {
+                            "image/png": {
+                                "schema": {
+                                    "type": "object",
+                                    "format": "binary"
+                                }
+                            },
+                            "image/jpeg": {
+                                "schema": {
+                                    "type": "object",
+                                    "format": "binary"
+                                }
+                            },
+                            "image/jpg": {
+                                "schema": {
+                                    "type": "object",
+                                    "format": "binary"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Post or Image not found"
                     },
                     "401": {
                         "description": "Unauthorized"
